--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@prisma/client": "4.2.1",
     "formik": "^2.2.9",
     "next": "latest",
-    "next-auth": "^4.0.0-beta.6",
+    "next-auth": "^4.10.3",
     "prisma": "^4.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
