--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "next": "latest",
     "next-auth": "^4.10.3",
     "nextjs-progressbar": "^0.0.14",
+    "pdf-lib": "^1.17.1",
     "prisma": "^4.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
